the fourth commit

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +8,6 @@
   <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="icon/favicon.png">
 </head>
-
 <body>
   <div class="container">
     <header class="header">
@@ -62,10 +60,7 @@
       </section>
         <p class="main__text">Bon appetit :)</p>
     </main>
-    <footer class="footer">
-
-      </fooetr>
+    <footer class="footer"></fooetr>
   </div>
 </body>
-
 </html>
