--- a/bouncy/index.html
+++ b/bouncy/index.html
@@ -26,7 +26,14 @@
             <a href="#team" class="header__nav-item">Team</a>
             <a href="#contact" class="header__nav-item">Contact</a>
           </nav>
+          <button id="btn-menu" class="btn-menu"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </div>
+        <nav id="nav-mobail" class="header__nav-mobail">
+          <a href="#hello" class="header__item-mobail header__item-mobail--active">Hello</a>
+          <a href="#portfolio" class="header__item-mobail">Portfolio</a>
+          <a href="#team" class="header__item-mobail">Team</a>
+          <a href="#contact" class="header__item-mobail">Contact</a>
+        </nav>
 
         <div id="nav-scroll" class="header__navbar-scroll">
           <div class="header__logo">
@@ -52,7 +59,7 @@
     <p class="portfolio__title">the portfolio</p>
     <p class="portfolio__description">At vero eos et accusamus et iusto odio
        dignissimos ducimus qui blanditiis praesentium</p>
-    <div class="container" style="width: 1200px;">
+    <div class="filtr-container">
       <ul class="custom-simplefilter">
           <li class="active" data-filter="all">All Works</li>
           <li data-filter="1">Print</li>
@@ -129,8 +136,48 @@
               At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
           </div>
       </div>
-      <div class="team__content"></div>
-      <div class="team__content"></div>
+      <div class="team__content">
+        <div class="team__item">
+          <img class="team__img" src="./img/team/man.png" alt="photo">
+          <div class="team__overlay overlay">
+            <div class="overlay__content">
+              <a href="https://www.instagram.com/?hl=ru" class="overlay__links"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com" class="overlay__links overlay__links--margin"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/?lang=ru" class="overlay__links"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="team__item team__item--text">
+          <p class="team__title">Abdullah Noman</p>
+          <p class="team__subtitle">Creative Director, Code Cafe</p>
+          <p class="team__description">At vero eos et accusamus et iusto odio dignissimos ducimus
+            qui blanditiis praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
+        </div>
+      </div>
+      <div class="team__content">
+        <div class="team__item">
+          <img class="team__img" src="./img/team/man.png" alt="photo">
+          <div class="team__overlay overlay">
+            <div class="overlay__content">
+              <a href="https://www.instagram.com/?hl=ru" class="overlay__links"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+              <a href="https://www.facebook.com" class="overlay__links overlay__links--margin"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/?lang=ru" class="overlay__links"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="team__item team__item--text">
+          <p class="team__title">Abdullah Noman</p>
+          <p class="team__subtitle">Creative Director, Code Cafe</p>
+          <p class="team__description">At vero eos et accusamus et iusto odio dignissimos ducimus
+            qui blanditiis praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui
+            blanditiis praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+            praesentium. At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
+        </div>
+      </div>
     </div>
   </div>
   </section>
@@ -163,26 +210,49 @@
             <p class="testimonials__subtitle">founder, artways bd</p>
           </div>
       </div>
-      <div class="testimonials__content">2</div>
-      <div class="testimonials__content">3</div>
+      <div class="testimonials__content">
+        <div class="testimonials__item testimonials__item--left">
+          <div class="testimonials__box">
+            <img class="testimonials__img" src="./img/testimonials/Layer-439.png" alt="photo">
+          </div>
+        </div>
+        <div class="testimonials__item testimonials__item--right">
+          <p class="testimonials__description">At vero eos et accusamus et
+            iusto odio dignissimos ducimus qui blanditiis praesentium
+            voluptatum deleniti atque corrupti quos dolores et quas molestias
+             excepturi sint occaecati cupiditate non provident, similique sunt
+             in culpa qui officia deserunt mollitia.</p>
+          <p class="testimonials__title">partho</p>
+          <p class="testimonials__subtitle">founder, artways bd</p>
+        </div>
+      </div>
+      <div class="testimonials__content">
+        <div class="testimonials__item testimonials__item--left">
+          <div class="testimonials__box">
+            <img class="testimonials__img" src="./img/testimonials/Layer-439.png" alt="photo">
+          </div>
+        </div>
+        <div class="testimonials__item testimonials__item--right">
+          <p class="testimonials__description">At vero eos et accusamus et
+            iusto odio dignissimos ducimus qui blanditiis praesentium
+            voluptatum deleniti atque corrupti quos dolores et quas molestias
+             excepturi sint occaecati cupiditate non provident, similique sunt
+             in culpa qui officia deserunt mollitia.</p>
+          <p class="testimonials__title">partho</p>
+          <p class="testimonials__subtitle">founder, artways bd</p>
+        </div>
+      </div>
     </div>
   </div>
   </section>
-
   <section id="contact" class="contact">
     <p class="contact__title">Contact Us</p>
     <p class="contact__description">At vero eos et accusamus et iusto odio
       dignissimos ducimus qui blanditiis praesentium</p>
   </section>
-
-
-
   <section class="map">
     <div id="map" class="map__content"></div>
   </section>
-
-
-
   <section id="footer" class="footer">
     <div class="footer__logo">
       <img class="footer__img" src="./img/footer/Bouncy.png" alt="logo">
